# auto-rye

./: README.md  pyproject.toml  rye_setup.sh  setup.sh
